# fastapi-saas-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.draft.md  README.md  Taskfile.yml  compose.yaml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: .env.example  main.py
backend/app/access_control/: guards.py
backend/app/api/: debug.py  health.py  master_router.py  organisations.py  users.py
backend/app/api/dependencies/: __init__.py  domain_services.py
backend/app/audit/: __init__.py  context.py
backend/app/audit/models/: __init__.py  audit_event.py
backend/app/audit/repositories/: __init__.py  audit_events.py
backend/app/audit/schemas/: __init__.py  audit_events.py
backend/app/audit/services/: __init__.py  audit_events.py
backend/app/commands/: create_platform_admin.py
backend/app/core/: access_guards.py  auth.py  auth_claims.py  auth_jwt.py  context.py
backend/app/core/auth/: __init__.py  dependencies.py
backend/app/core/config/: settings.py
backend/app/core/db/: __init__.py  mixins.py  registry.py  session.py
backend/app/core/errors/: __init__.py  codes.py  exceptions.py  handlers.py  integrity.py  openapi.py  problem.py
backend/app/core/logging/: __init__.py  categories.py  factory.py  processors.py
backend/app/core/middleware/: access_log.py  request_context.py
backend/app/core/redis/: __init__.py  (+1 more)
backend/app/outbox/: dispatcher.py  worker_runtime.py  workers.py
backend/app/repositories/: memberships.py  users.py
backend/app/schemas/: health.py  organisations.py  users.py
backend/app/services/: health.py  memberships.py  onboarding.py  organisations.py  users.py
backend/app/users/: __init__.py
backend/docs/: README.draft.md  invite-membership-foundation.md  keycloak-identity-contract.md  observability.md  rate-limiting.md  rate_limiting.md  testing-e2e.md
backend/docs/auth/: keycloak-identity-contract.md
backend/docs/foundation/: invite-membership-foundation.md
backend/docs/organisations/: foundation-scope.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_core_tables.py  0001_initial_schema.py  0002_add_user_org_status.py  0002_add_user_org_statuses.py  0002_user_projection_and_membership_role_updates.py  0002_user_projection_and_onboarding.py  0003_drop_users_email_unique_constraint.py  0003_enforce_single_organisation_membership.py  0003_invite_lifecycle_hardening.py  0003_single_membership_per_user.py  0004_add_audit_events.py  0004_audit_events_foundation.py  0004_invites_and_membership_activity.py  0004_invites_membership_activation_and_org_soft_delete.py  0005_add_platform_staff.py  0005_invite_expiration.py  0005_invites_add_expires_at.py  0006_add_outbox_events.py  0007_add_one_active_owner_index.py
backend/tests/: conftest.py
backend/tests/api/: test_auth_boundary.py  test_health.py  test_invites.py  test_keycloak_jwt_path.py  test_openapi_contract.py  test_organisation_directory_membership_management.py  test_organisations_api.py  test_rate_limiting.py  test_rate_limiting_integration.py  test_users_organisations.py
backend/tests/app/: test_app_factory.py  test_auth_jwt.py  test_auth_jwt_validation.py  test_auth_principal.py  test_lifespan.py
backend/tests/audit/: test_audit_event_service.py  test_audit_events.py  test_audit_events_api_flows.py  test_sensitive_actions_audit.py  test_tenant_audit_events.py
backend/tests/config/: test_settings.py
backend/tests/db/: test_metadata.py  test_migrations.py  test_session.py
backend/tests/errors/: test_error_handlers.py
backend/tests/helpers/: alembic.py  asyncio_runner.py  auth.py  invites.py  jwt.py  outbox.py  settings.py
backend/tests/invites/: test_invite_repository.py
backend/tests/logging/: test_access_log.py  test_error_logging_redaction.py  test_lifespan_logging.py  test_logging_config.py  test_logging_redaction_integration.py  test_processors.py  test_redaction.py  test_request_context_edge_cases.py  test_request_id_processor.py
backend/tests/middleware/: test_request_context.py
backend/tests/observability/: test_http_metrics_middleware.py  test_metrics.py  test_metrics_safety.py  test_observability_lifecycle.py  test_observability_settings.py  test_otlp_export_e2e.py  test_otlp_export_integration.py
backend/tests/outbox/: test_outbox_payloads.py  test_outbox_workers.py
backend/tests/platform/: test_platform_audit_events.py  test_platform_bootstrap.py  test_platform_organisations.py  test_platform_permissions.py  test_platform_staff_management.py  test_platform_users.py
backend/tests/rate_limit/: test_endpoint_protection.py  test_policy_registry.py  test_rate_limit_metrics_hooks.py
backend/tests/redis/: test_client.py
backend/tests/secrets/: test_env_provider.py  test_factory.py  test_helpers.py  test_vault_provider.py
backend/tests/services/: test_invite_service.py  test_membership_service.py  test_onboarding_service.py  test_organisation_access_service.py  test_organisation_service.py  test_user_service.py
backend/tests/tests/: test_error_handlers.py
(+116 files in other folders)
