[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-saas-template"
version = "0.1.0"
description = "FastAPI SaaS backend template (modular monolith, GDPR-aware)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.135,<1.0",
    "uvicorn[standard]>=0.44,<1.0",
    "pydantic>=2.13,<3.0",
    "email-validator>=2.3,<3.0",
    "pydantic-settings>=2.13,<3.0",
    "scalar-fastapi>=1.8,<2.0",
    "structlog>=25.5,<26.0",
    "PyJWT[crypto]>=2.10,<3.0",
    "hvac>=2.4,<3.0",
    "sqlalchemy[asyncio]>=2.0,<2.2",
    "alembic>=1.18,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis[hiredis]>=5.0,<6.0",
    "limits[async-redis]>=5.8,<6.0",
    "opentelemetry-api==1.28.2",
    "opentelemetry-sdk==1.28.2",
    "opentelemetry-exporter-otlp-proto-http==1.28.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "testcontainers>=4.14.2,<5.0",
    "ruff>=0.15,<1.0",
    "pre-commit>=4.5,<5.0",
    "httpx>=0.28,<1.0",
    "aiosqlite>=0.21,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require ephemeral external services like PostgreSQL, Redis, or OpenTelemetry Collector",
]

[tool.alembic]
script_location = "%(here)s/migrations"
prepend_sys_path = ["%(here)s"]
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"
timezone = "UTC"
